--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -187,7 +187,7 @@ html {
   position: relative;
   width: 100%;
   height: auto;
-  background-image: url('/img/img-port2.jpg');
+  background-image: url('../img/img-port2.jpg');
   background-size: cover;
   background-position: center;
   color: white;
@@ -541,7 +541,7 @@ h1 {
     position: relative;
     width: 100%;
     height: auto;
-    background-image: url('/img/img-port2.jpg');
+    background-image: url('../img/img-port2.jpg');
     background-size: cover;
     background-position: center;
     color: white;
